# criu

./: .gitignore  CMakeLists.txt  Makefile
compel/arch/x86/plugins/std/syscalls/: syscall_64.tbl
criu/: Makefile  Makefile.packages
criu/pie/: parasite.c  restorer.c
cxl-exp/: CMakeLists.txt
cxl-exp/00.numa/: README.md  alloc_memory_with_numa.c  alloc_memory_wo_numa.c  get_mem_info.c  get_numa_info.c
examples/: README.md  dump.sh  heatfile.txt  log.txt  restore.sh  start_loop.sh
examples/benchmarks/: dump.sh  perf_restore.sh
examples/container/: ckpt.sh  create.sh  log.sh  moniter.sh  output.sh  resume.sh  run.sh
examples/simple-loop/: dump.sh  restore.sh  simple_loop.c  start_loop.sh
global-sorter/: sort.cpp
numa_mmap/: Makefile  script.cpp  script.h
test-process/: container-create.cpp
test/others/shell-job/: run.py
